--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,14 @@
+[build]
+  command = "npm run build"
+  publish = "dist"
+  functions = "netlify/functions"
+
+[dev]
+  functions = "netlify/functions"
+
+[functions]
+  node_bundler = "esbuild"
+
 [[redirects]]
   from = "/comp4537/lab00/*"
   to = "https://comp4537lab00.netlify.app/:splat"
