--- a/netlify.toml
+++ b/netlify.toml
@@ -9,3 +9,28 @@
 [functions]
   node_bundler = "esbuild"
 
+[[redirects]]
+  from = "/comp4537/lab00/*"
+  to = "https://comp4537lab00.netlify.app/:splat"
+  status = 200
+  force = true
+
+[[redirects]]
+  from = "/comp4537/lab01/*"
+  to = "https://comp4537lab01.netlify.app/:splat"
+  status = 200
+  force = true
+
+[[redirects]]
+  from = "/smart-grocery-shopping-app/*"
+  to = "https://smart-grocery-shopping-app.netlify.app/:splat"
+  status = 200
+  force = true
+
+[[redirects]]
+  from = "/smart-grocery-shopping-app/functions/*"
+  to = "https://smart-grocery-shopping-app.netlify.app/.netlify/functions/:splat"
+  status = 200
+  force = true
+  headers = { Host = "smart-grocery-shopping-app.netlify.app" }
+
